<resources>
    <string name="app_name">Stores</string>
    <string name="imagePhoto_description">Store Image</string>
    <string name="description_fab">Add store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ED_hint_store_name">Store Name</string>
    <string name="helper_required">Required</string>
    <string name="ED_hint_store_phone">Phone</string>
    <string name="ED_hint_store_website">Website Url</string>
    <string name="ED_hint_store_image_preview">Store Image Url</string>
    <string name="edti_fragment_tittle">Enter a Store</string>
    <string name="menu_save">Save</string>
    <string name="store_succes_add">Store Succesfuly Added</string>
    <string name="arg_id_key">"key value "</string>
</resources>