<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditStoreFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Store_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ED_hint_store_name"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_store"
            app:counterMaxLength="@integer/et_store_name_maxlenght"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ED_Store_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/et_store_name_maxlenght"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_Store_Phone"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ED_hint_store_phone"
        app:helperText="@string/helper_required"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_smartphone"
        app:counterMaxLength="@integer/et_store_phone_maxlenght"
        app:counterEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ED_Store_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/et_store_phone_maxlenght"
            android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Store_Website"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ED_hint_store_website"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_link"
            app:counterEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ED_Store_Website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/et_lines"
                android:minLines="@integer/et_lines"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Store_Image_Preview"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/ED_hint_store_image_preview"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_link"
                app:counterEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ED_Store_Image_Preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="@integer/et_image_preview_lines"
                    android:minLines="@integer/et_image_preview_lines"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ImagePhoto"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="@dimen/image_store_preview"
                android:layout_height="@dimen/image_store_preview"
                android:layout_marginStart="@dimen/default_padding"
                android:src="@drawable/ic_image"
                />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>